Fixed logout button color.
Changed to green, since the purple was too dark to see. I don't like the green so much either, so I'll need to do more with it.

--- a/static/site.css
+++ b/static/site.css
@@ -33,10 +33,10 @@ footer a{
   font-size: .8em;
 }
 
-a:link {text-decoration:none;}
-a:visited {text-decoration:none;}
-a:hover {text-decoration:underline;}
-a:active {text-decoration:underline;}
+a:link {text-decoration:none;color:green;}
+a:visited {text-decoration:none;color:green;}
+a:hover {text-decoration:underline;color:green;}
+a:active {text-decoration:underline;color:green;}
 
 #toolbar {
   width: 100%;
